Criacao do projeto api de auth, configuracao do dbcontext, criacao do repository - falta implementar-

--- a/Auth.API/appsettings.Development.json
+++ b/Auth.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=AuthDB;User Id=sa;Password=Motora@foda1;TrustServerCertificate=True;"
   }
 }
